This is the HISTORY file for Expect.  Modifications made by Cygnus
support are in ChangeLog. - Don

Date	Version	Description
-------	-------	------------------------------------------------------
		In order to do threads, changed exp_is_debugging to a function.
		This means I'll probably have to change the interface for the
		C library which uses that symbol too.  Probably need to
		duplicate the debuglog functions.

		Scott Stanton switched to using objects more comprehensively
		and using 8.1 regexp.

		Created Expect channel driver.

		Began adding thread support.

		Forced existence of spawn_id variable in environment.
		This makes things easier later.

		Kenji Kamizono <kenji@math.columbia.edu> noted it was possible
		to compile Linux (2.2.5) so that it recognized both openpty
		and ptmx leading to conflicts.  I arbitrarily chose ptmx.

4/1/99	5.30.0  Martin Forssen <maf@crt.se> provided fix to allow configure
		to start with LDFLAGS from environment.

		Paul Tazzyman <Paul.Tazzyman@one.at> noted that log_file didn't
		check for logging twice without turning off logging first.

		Ben <spy@calvin.iconoclasm.org> provided updated host for
		weather example.

		Jonathon Kamens noted that Expect didn't build properly if
		Tcl and/or Tk used build/install directories out of the usual
		hierarchy.  At the same time, I fixed a number of other related
		problems in Makefile/configure.

		Pierre Pomes <ppomes@it.marseille-innov.assoc.fr> provided fix
		to ftp-inband.  It blew up from an unprotected send that
		was handed a uuencoded line that started with a -.

		Autoexpect was thrown off by simple-minded [file executable]
		test picking up expect directory while searching for
		executable.

1/21/99 5.29.0	Martin Forssen provides mods to support INSTALL_ROOT.

		Bryan Surles <surles@scriptics.com> modified configure.in to
		map DBGX to the same value as TCL_DBGX so the .so is named
		correctly.

		Suresh Sastry <suresh@scriptics.com> forced $LIBS to be